--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,6 +38,10 @@
     justify-content: space-around;
 }
 
+.container__right {
+    width: 65%;
+}
+
 .score_box {
     background-color: #fff;
     padding: 30px;
@@ -55,8 +59,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    height: 6rem;
+     height: 6rem;
+     width: 100%;
+
 }
 
 #card-name{
@@ -65,4 +70,45 @@
 
 #card-type{
     font-size: 1rem;
+}
+
+.card-box__container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0.3rem;
+    
+}
+
+.card-versus{
+    display: flex;
+    flex-direction: column;
+    padding-top: 0.1rem;
+    height: 300px;
+}
+
+.versus-top, 
+.versus-bottom{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.versus-bottom{
+    margin-top:  1rem;
+}
+
+#next-duel{
+    display: none;
+}
+
+.card-box {
+    height: 9rem;
+    width: 100%;
+    display: flex;
+    flex-direction:  row;
+    align-items: center;
+    justify-content: space-around;
 }
