--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,7 +10,7 @@
 
 .bg-video .video  {
     height: 100vh;
-    /* width: 100vh; */
+    /* width: 100vw; */
 }
 
 .bg-video::after{
@@ -19,7 +19,7 @@
     top: 0;
     left: 0;
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background: linear-gradient(90deg,  rgba(0,0,0, 1) 0%,rgba(0,0,0, 0.8) 50%,rgba(0,0,0, 1) 100% );
 }
 
@@ -31,6 +31,7 @@
 }
 
 .container__left{
+    display: flex;
     width: 35%;
     min-width: 300px;
     flex-direction: column;
@@ -78,10 +79,10 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 0.3rem;
-    
 }
 
-.card-versus{
+.card-versus__container{
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     padding-top: 0.1rem;
@@ -111,4 +112,22 @@
     flex-direction:  row;
     align-items: center;
     justify-content: space-around;
+}
+
+
+.card-infield{
+    height: 11.2rem;
+    width: 8rem;
+    /* border: 1px solid #fff; */
+    /* border: 1px solid blue; */
+    border-radius: 8px;
+}
+
+
+.card{
+transition: transform 0.2s;
+}
+
+.card:hover{
+    transform: scale(1.2);
 }
